<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.naseeha.inter.MainActivity">


    <ScrollView
        android:layout_width="600dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="333dp"
                android:layout_height="170dp"
                android:src="@drawable/segments"
                android:id="@+id/imageView" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:id="@+id/btnliving"
                android:scaleType="fitCenter"
                android:contentDescription="@string/living"
                android:background="@null"
                android:src="@drawable/living"
                />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/living"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/textliving"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/btnKitchen"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/kitchen"
                    android:background="@null"
                    android:src="@drawable/kitchen"
                    />
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/kitchen"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/textkitchen"

                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:id="@+id/btngarden"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/garden"
                    android:background="@null"
                    android:src="@drawable/garden"
                    />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/garden"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/textgarden"

                    />
            </LinearLayout>




            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="100dp"
                android:id="@+id/segment1"
                android:layout_height="wrap_content"
                android:text="@string/segment1"/>
            <Button
                android:layout_width="100dp"
                android:id="@+id/segment2"
                android:layout_height="wrap_content"
                android:text="@string/segment2"/>
            <Button
                android:layout_width="100dp"
                android:id="@+id/segment3"
                android:layout_height="wrap_content"
                android:text="@string/segment3"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="100dp"
                    android:id="@+id/segment4"
                    android:layout_height="wrap_content"
                    android:text="@string/segment4"/>
                <Button
                    android:layout_width="100dp"
                    android:id="@+id/segment5"
                    android:layout_height="wrap_content"
                    android:text="@string/segment5"/>
                <Button
                    android:layout_width="100dp"
                    android:id="@+id/segment6"
                    android:layout_height="wrap_content"
                    android:text="@string/segment6"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="100dp"
                    android:id="@+id/segment7"
                    android:layout_height="wrap_content"
                    android:text="@string/segment7"/>
                <Button
                    android:layout_width="100dp"
                    android:id="@+id/segment8"
                    android:layout_height="wrap_content"
                    android:text="@string/segment8"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
