<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_segment5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.naseeha.inter.segment5">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/s5_light"
                    android:background="@null"
                    android:contentDescription="@string/light"
                    android:src="@drawable/bulb_on" />


                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:background="@drawable/final2"
                    android:text="@string/on"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:id="@+id/s5_light_on"
                    android:layout_marginTop="15dp" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:background="@drawable/final2"
                    android:text="@string/off"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:id="@+id/s5_light_off"
                    android:layout_marginTop="15dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/s5_fan"
                    android:background="@null"
                    android:contentDescription="@string/fan"
                    android:src="@drawable/fan_on" />


                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/on"
                    android:background="@drawable/final2"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:id="@+id/s5_fan_on"
                    android:layout_marginTop="15dp" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/final2"
                    android:textStyle="bold"
                    android:text="@string/off"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:id="@+id/fan_off"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/s5_motion"
                    android:background="@null"
                    android:contentDescription="@string/motion"
                    android:src="@drawable/motion_actvate" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/active"
                    android:background="@drawable/final2"
                    android:textSize="16sp"
                    android:id="@+id/s5_motion_active"
                    android:layout_marginTop="15dp" />

                <Button
                    android:layout_width="135dp"
                    android:background="@drawable/final2"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/deactive"
                    android:textSize="16sp"
                    android:id="@+id/s5_motion_deactive"
                    android:layout_marginTop="15dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/s5_smoke"
                    android:background="@null"
                    android:contentDescription="@string/smoke"
                    android:src="@drawable/smoke_active" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/active"
                    android:background="@drawable/final2"
                    android:textSize="16sp"
                    android:id="@+id/s5_smoke_active"
                    android:layout_marginTop="15dp" />

                <Button
                    android:layout_width="135dp"
                    android:background="@drawable/final2"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/deactive"
                    android:textSize="16sp"
                    android:id="@+id/s5_smoke_deactive"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/s5_autolight"
                    android:background="@null"
                    android:contentDescription="@string/light"
                    android:src="@drawable/autolightcntrller_active" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/active"
                    android:background="@drawable/final2"
                    android:textSize="16sp"
                    android:id="@+id/s5_autolight_active"
                    android:layout_marginTop="15dp" />

                <Button
                    android:layout_width="135dp"
                    android:background="@drawable/final2"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/deactive"
                    android:textSize="16sp"
                    android:id="@+id/s5_autolight_deactive"
                    android:layout_marginTop="15dp"/>




            </LinearLayout>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/lin_humi"
                >

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/s5_humidity"
                    android:background="@null"
                    android:contentDescription="@string/humi"
                    android:src="@drawable/humi_active" />


                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:background="@drawable/activate"
                    android:textSize="16sp"
                    android:id="@+id/s5_humidity_active"
                    android:layout_marginTop="15dp" />

                <Button
                    android:layout_width="50dp"
                    android:background="@drawable/deactivate"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:id="@+id/s5_humidity_deactive"
                    android:layout_marginTop="15dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/final2"
                    android:textStyle="bold"
                    android:text="@string/check"
                    android:textSize="16sp"
                    android:id="@+id/s5_humidity_check"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >


                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/s5_temparature"
                    android:background="@null"
                    android:contentDescription="@string/light"
                    android:src="@drawable/temp_activate" />



                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:background="@drawable/activate"
                    android:textSize="16sp"
                    android:id="@+id/s5_temperature_active"
                    android:layout_marginTop="15dp" />

                <Button
                    android:layout_width="50dp"
                    android:background="@drawable/deactivate"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:id="@+id/s5_temparature_deactive"
                    android:layout_marginTop="15dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:background="@drawable/final2"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:text="@string/check"
                    android:textSize="16sp"
                    android:id="@+id/s5_temparature_check"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
